<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="@string/home">
    </item>
    <item android:id="@+id/nav_articles"
        android:icon="@mipmap/ic_class_black_24dp"
        android:title="@string/free_articles">
    </item>
    <item android:id="@+id/nav_invite_friends"
        android:icon="@mipmap/ic_supervisor_account_black_24dp"
        android:title="@string/invite_friends">
    </item>

    <item android:id="@+id/nav_Share"
        android:icon="@mipmap/ic_share_black_24dp"
        android:title="@string/share_the_app">
    </item>

    <item android:id="@+id/nav_rate_us"
        android:icon="@mipmap/ic_star_rate_black_18dp"
        android:title="@string/rate_the_app">
    </item>
    <item android:id="@+id/nav_about_us"
        android:icon="@mipmap/ic_info_outline_black_24dp"
        android:title="@string/about_us">
    </item>
    <item android:id="@+id/logout"
        android:icon="@mipmap/ic_power_settings_new_black_24dp"
        android:title="@string/logout">
    </item>

</menu>