<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.ravikiran.acepro.quiz_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/timer_quit_buttons">

    <TextView
        android:id="@+id/TextTimerShow"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:contentDescription="quit_button"
        android:foregroundGravity="center"
        android:src="@android:drawable/ic_lock_power_off"
        tools:ignore="HardcodedText" />
</RelativeLayout>

        <!-- Question Text View & card View -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/Question_CardView"
            android:layout_width="match_parent"
            android:layout_below="@+id/timer_quit_buttons"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp"
            card_view:cardBackgroundColor="@color/cardview_light_background"
            >

            <TextView
                android:id="@+id/TextView"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
android:layout_margin="4dp"
                android:layout_height="wrap_content"
                android:text="@string/question_here"
                android:textColor="@color/questioncolor"
                android:textSize="16sp"

                />
            <!-- android:text="Q 1: What Is RAM ? "
             android:textColor="@color/errorColor"
             android:textSize="24sp"
             -->











        </android.support.v7.widget.CardView>
        <!-- Radio Group Buttons  -->
        <android.support.v7.widget.CardView
            android:id="@+id/Radio_Button_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Question_CardView"
            android:layout_marginTop="10dp"
            card_view:cardBackgroundColor="@color/cardview_light_background"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="vertical"
                card_view:cardCornerRadius="40dp">



                <RadioGroup
                    android:id="@+id/RadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/OptionAdisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="@string/option_a"
                        android:textColor="@color/optionColor" />

                    <RadioButton
                        android:id="@+id/OptionBdisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="@string/option_b"
                        android:textColor="@color/optionColor" />

                    <RadioButton

                        android:id="@+id/OptionCdisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="@string/option_c"
                        android:textColor="@color/optionColor" />

                    <RadioButton
                        android:id="@+id/OptionDdisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="@string/option_d"
                        android:textColor="@color/optionColor" />








                </RadioGroup>









            </LinearLayout>




        </android.support.v7.widget.CardView>
        <!--  Card View For Button Next And Submit  -->
        <android.support.v7.widget.CardView
            android:id="@+id/CardView_For_Nxt_and_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Radio_Button_cardView"
            android:layout_marginTop="10dp"

            >

    <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/next"
        tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/previous"
                tools:ignore="RtlHardcoded" />


        </android.support.v7.widget.CardView>


    </RelativeLayout>


</ScrollView>
