<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ravikiran.acepro.quiz_home_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/card_view_category_one">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"


            >

            <TextView
                android:id="@+id/text_View1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/free_tests"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:height="2dp"
                android:background="@color/green_bar" />
            <TextView
                android:id="@+id/abt_free_test"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/abt_free_tests"
                android:textColor="@color/text_color"
                android:textSize="23sp" />
            <Button
                android:id="@+id/btn_category_one_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="right"


                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_category_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/card_view_category_one"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/text_View2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chapterwise"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:height="2dp"
                android:background="@color/green_bar" />
            <TextView
                android:id="@+id/abt_chapter_wise_test"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/abt_chapter_wise_tests"
                android:textColor="@color/text_color"
                android:textSize="23sp" />
            <Button
                android:id="@+id/btn_category_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="right"


                tools:ignore="RtlHardcoded" />






        </LinearLayout>




    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_category_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/card_view_category_two"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/text_View3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/practise"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:height="2dp"
                android:background="@color/green_bar" />
            <TextView
                android:id="@+id/abt_practise_test"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/abt_practise_tests"
                android:textColor="@color/text_color"
                android:textSize="23sp" />
            <Button
                android:id="@+id/btn_category_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="right"


                tools:ignore="RtlHardcoded" />






        </LinearLayout>




    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_category_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/card_view_category_three"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/text_View4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/assessments"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:height="2dp"
                android:background="@color/green_bar" />
            <TextView
                android:id="@+id/abt_assessments"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/abt_assessments"
                android:textColor="@color/text_color"
                android:textSize="23sp" />
            <Button
                android:id="@+id/btn_category_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="right"


                tools:ignore="RtlHardcoded" />






        </LinearLayout>




    </android.support.v7.widget.CardView>


    </RelativeLayout>

</ScrollView>
