<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded,UselessParent">
        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:elevation="200dp"
            card_view:cardBackgroundColor="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            tools:ignore="ObsoleteLayoutParam">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="380dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/you_can_try_your_mock_test_here"
                    android:textColor="@color/text_color"
                    android:textSize="23sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:height="2dp"
                    android:background="@color/green_bar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/start_your_test_by_clicking" />

                <Button
                    android:id="@+id/btnExam"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="70dp"
                    android:text="@string/startquiz"


                    tools:ignore="RtlHardcoded" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:elevation="200dp"
            card_view:cardBackgroundColor="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text2"
                    android:layout_width="380dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/you_can_ask_for_help_here_too"
                    android:textColor="@color/text_color"
                    android:textSize="23sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:height="2dp"
                    android:background="@color/green_bar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/start_chat_by_clicking_below_button" />

                <Button
                    android:id="@+id/btnChat"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="70dp"
                    android:text="@string/chat"


                    tools:ignore="RtlHardcoded" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</RelativeLayout>